# couchbase-lite-libsqlcipher

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  build-amalgamation.ps1  build-amalgamation.sh  build-android.sh  build-ios.sh  build-linux.sh  build-osx.sh  build-tvos.sh  build-windows.cmd  build.gradle  build_windows.ps1  sqlite3.def  sqlite3.exp
OSLicenses/: SQLCipher.txt
android/: Android-Shared.mk  Android-Static.mk  Application.mk
libs/osx/: libsqlcipher.dylib
libs/windows/amd64/: sqlcipher.lib
libs/windows/x86/: sqlcipher.lib
libs/windows/x86_64/: sqlcipher.lib
src/c/: crypto_mbedtls.c
src/xcode/libsqlcipher/clean/: info.plist
src/xcode/libsqlcipher/clean/ModuleCache/: Session.modulevalidation
src/xcode/libsqlcipher/libsqlcipher.xcodeproj/: project.pbxproj
src/xcode/libsqlcipher/libsqlcipher.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
